Issue #SH-1243 fix: Fixed "Do not agree" button is not aligned

--- a/src/app/components/popups/consent-pii-popup/consent-pii-popup.component.scss
+++ b/src/app/components/popups/consent-pii-popup/consent-pii-popup.component.scss
@@ -68,7 +68,7 @@
   color: white;
   background-color: $blue;
   font-size: 16px;
-  padding: 8px 56px;
+  padding: 8px 16%;
   margin-left: 18px;
   border: 2px solid $blue
 }
@@ -76,7 +76,7 @@
   color: $blue;
   background-color: white;
   font-size: 16px;
-  padding: 8px 32px;
+  padding: 8px 9%;
   border: 2px solid $blue
 }
 .btn-info{
